--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
                 methods: {
                     setTab(tab) {
                         this.tab = tab
+                    },
+                    sendQuery() {
+                        let query = this.query
+                        this.query = ''
+                        fetch('/query', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ query: query}) })
+                            .then(res => res.json())
+                            .then(data => console.log(data))
                     }
                 }
             }).mount('#app')
