Connected querysender to query button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <textarea v-model="query">
 
                 </textarea> <br>
-                <button> Query </button>
+                <button @:click="sendQuery()"> Query </button>
             </div>
 
             <div>
