--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         let query = this.query
                         this.query = ''
                         fetch('/query', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ query: query}) })
-                            .then(res => res.json())
+                            .then(res => { console.log(res); return res.json(); })
                             .then(data => console.log(data))
                     }
                 }
